# health-anomaly-guardian

./: .coverage  .coverage.sorcerer.93599.XBnbkmEx  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  JSON_OUTPUT_EXAMPLE.md  README.md  main.py  pyproject.toml  pytest.ini  requirements-test.txt
.github/workflows/: ci.yml  release.yml
anomaly_detector/: __init__.py  cache.py  cli.py  config.py  detector.py  exceptions.py
anomaly_detector/plugins/: __init__.py  eight.py  emfit.py  oura.py
tests/: __init__.py  conftest.py  test_cache.py  test_cache_plugin_integration.py  test_cli.py  test_cli_integration.py  test_config.py  test_detector.py  test_detector_plugin_integration.py  test_e2e.py  test_eight_plugin.py  test_emfit_plugin.py  test_exceptions.py  test_oura_plugin.py  test_plugin_manager.py  test_plugins.py  test_plugins_eight.py  test_plugins_emfit.py  test_plugins_oura.py
