[project]
name = "health-anomaly-guardian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "emfitapi-python",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "openai>=1.93.1",
    "scikit-learn>=1.6.1",
    "rich>=14.0.0",
]

[tool.uv.sources]
emfitapi-python = { git = "https://github.com/harperreed/emfitapi-python.git" }
