[project]
name = "health-anomaly-guardian"
version = "0.1.2"
authors = [
  { name="Harper Reed", email="harper@nata2.org" },
]
description = "AI-powered health anomaly detection system using sleep and wellness data"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Operating System :: OS Independent",
]
license = "MIT"
keywords = ["health", "anomaly-detection", "sleep", "wellness", "ai", "machine-learning"]
dependencies = [
    "numpy>=2.2.6",
    "emfitapi-python>=0.1.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "openai>=1.93.1",
    "scikit-learn>=1.6.1",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/harperreed/health-anomaly-guardian"
Repository = "https://github.com/harperreed/health-anomaly-guardian"
Issues = "https://github.com/harperreed/health-anomaly-guardian/issues"
Documentation = "https://github.com/harperreed/health-anomaly-guardian#readme"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "safety>=3.2.8",
    "bandit>=1.8.0",
    "requests>=2.32.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anomaly_detector"]

[project.scripts]
anomaly-detector = "anomaly_detector.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config --disable-warnings"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["anomaly_detector"]
omit = ["tests/*"]

[tool.setuptools]
packages = ["anomaly_detector"]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
